Replace deprecated Integer constructor