@@ -783,7 +783,7 @@ public class CertificatePoliciesExtDefault extends EnrollExtDefault {
             nums = new int[numsVector.size()];
             try {
                 for (int i = 0; i < numsVector.size(); i++) {
-                    Integer ii = new Integer(numsVector.elementAt(i));
+                    Integer ii = Integer.valueOf(numsVector.elementAt(i));
                     nums[i] = ii.intValue();
                 }
             } catch (Exception e) {
